--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <nav class="navbar sticky-top">
         <div class="row">
           <div class="col-md-10 align-self-center">
-            <%= link_to 'Gretchen Joyce', root_path, class: "h1" %>
+            <%= link_to 'Gretchen Joyce - Software Developer', root_path, class: "h1" %>
           </div>
           <div class="col">
             <ul class="navbar-links">
